use only one windows version for testing purposes

--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        windows-version: ['10', '11']
+        windows-version: ['10']
         windows-featurepack: ['22h2-ent']
 
     steps:
