step install wsl2
Signed-off-by: Adrian Riobo Lorenzo <ariobolo@redhat.com>

--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -61,6 +61,7 @@ jobs:
 
     - name: Install wsl2
       run: |
+        set -xuo
         # Install wsl2
         echo "install wsl"
         ssh -i id_rsa -o StrictHostKeyChecking=no \
