--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -46,19 +46,6 @@ jobs:
           -o ServerAliveCountMax=1200 \
           $(cat username)@$(cat host) "systeminfo"
 
-    - name: Emulate X session 
-      run: |
-        # use fake rdp to emulate an active x session
-        podman run -d --name x-session \
-          -e RDP_HOST=$(cat host) \
-          -e RDP_USER=$(cat username) \
-          -e RDP_PASSWORD=$(cat userpassword) \
-          quay.io/rhqp/frdp:v0.0.1
-        # Wait until the x session has been created
-        podman wait --condition running x-session
-        # Check logs for the x session
-        podman logs x-session
-
     - name: Install wsl2
       run: |
         set -xuo
@@ -72,8 +59,22 @@ jobs:
         echo  "Reboot"
         ssh -i id_rsa -o StrictHostKeyChecking=no \
             $(cat username)@$(cat host) "Start-Process powershell -verb runas -ArgumentList \"Restart-Computer -Force\"" &>/dev/null
+        sleep 5
         # Wait for machine
-        while !(nc -z $(cat host) 22 &>/dev/null); do echo "Waiting for machine to come up ..." && sleep 7; done
+        while !(nc -z $(cat host) 22 &>/dev/null); do echo "Waiting for machine to come up ..." && sleep 3; done
+
+    - name: Emulate X session 
+      run: |
+        # use fake rdp to emulate an active x session
+        podman run -d --name x-session \
+          -e RDP_HOST=$(cat host) \
+          -e RDP_USER=$(cat username) \
+          -e RDP_PASSWORD=$(cat userpassword) \
+          quay.io/rhqp/frdp:v0.0.1
+        # Wait until the x session has been created
+        podman wait --condition running x-session
+        # Check logs for the x session
+        podman logs x-session
         
     - name: Run podman desktop e2e
       run: |
